--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,1 +1,11 @@
-<h1>Movie Lists</h1>
+<div class="banner">
+      <h1>WatchList Creator</h1>
+  <main>
+      <h2>Movie Lists</h2>
+    <ul class="list-cards">
+      <li class="add-list">
+        <%= link_to 'Add a list', new_list_path %>
+      </li>
+    </ul>
+  </main>
+</div>
