--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,4 +1,14 @@
 // Specific CSS for your home-page
-h1, h2 {
+h1 {
+  color: white;
+  font-size: 60px;
+  font-weight: 100;
+}
+
+h2 {
+  color: white;
+}
+
+.add-list {
   color: brown;
 }
