--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -2,10 +2,8 @@
       <h1>WatchList Creator</h1>
   <main>
       <h2>Movie Lists</h2>
-    <ul class="list-cards">
-      <li class="add-list">
+    <div class="add-list">
         <%= link_to 'Add a list', new_list_path %>
-      </li>
-    </ul>
+    </div>
   </main>
 </div>
