add dotenv rails

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,5 +1,5 @@
 .btn {
-  background-color: #4CAF50; /* Green */
+  background-color: blue;
   border: none;
   color: white;
   padding: 15px 32px;
